// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should confirm and close after confirm 1`] = `
<footer
  className="modal-foot"
>
  <DeferredSpinner
    className="spacer-right"
    loading={true}
    timeout={100}
  />
  <SubmitButton
    autoFocus={true}
    disabled={true}
  >
    confirm
  </SubmitButton>
  <ResetButtonLink
    disabled={true}
    onClick={[Function]}
  >
    cancel
  </ResetButtonLink>
</footer>
`;

exports[`should render correctly 1`] = `
<SimpleModal
  header="title"
  onClose={[MockFunction]}
  onSubmit={[Function]}
>
  <Component />
</SimpleModal>
`;

exports[`should render correctly 2`] = `
<Modal
  contentLabel="title"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        title
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <p>
        My confirm message
      </p>
    </div>
    <footer
      className="modal-foot"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={false}
        timeout={100}
      />
      <SubmitButton
        autoFocus={true}
      >
        confirm
      </SubmitButton>
      <ResetButtonLink
        disabled={false}
        onClick={[Function]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;
